# datastar-rs

./: Cargo.toml  README.md
src/: axum.rs  fragments.rs  generator.rs  lib.rs  message.rs  request.rs  response.rs  scripts.rs  signals.rs
src/message/: fragments.rs  mod.rs  script.rs  signals.rs
