[package]
name = "datastar"
version = "0.1.0"
edition = "2021"
authors = ["ravenclaw900 <ravenclaw900@protonmail.com>"]
repository = "https://github.com/ravenclaw900/datastar-rs"

[dependencies]
axum-core = { version = "0.4.3", optional = true }
bytes = { version = "1.6.0", optional = true }
futures-core = "0.3.30"
futures-util = { version = "0.3.30", optional = true }
http = { version = "1.1.0", optional = true }
serde = "1.0.203"
serde_json = "1.0.120"

[features]
axum = ["dep:axum-core", "dep:http", "dep:futures-util", "dep:bytes"]

[dev-dependencies]
async-stream = "0.3.5"
