[package]
name = "datastar"
version = "0.1.0"
edition = "2021"
authors = ["ravenclaw900 <ravenclaw900@protonmail.com>"]
repository = "https://github.com/ravenclaw900/datastar-rs"
license = "MIT OR Apache-2.0"
description = "A Rust helper library for crafting backend responses for the datastar hypermedia library."
keywords = ["datastar", "sse"]
categories = ["web-programming", "encoding"]

[dependencies]
async-trait = { version = "0.1.83", optional = true }
axum-core = { version = "0.4.5", optional = true }
bytes = { version = "1.8.0", optional = true }
futures-core = "0.3.31"
futures-util = { version = "0.3.31", optional = true }
http = { version = "1.1.0", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_urlencoded = { version = "0.7.1", optional = true }

[features]
axum = ["dep:async-trait", "dep:axum-core", "dep:http", "dep:futures-util", "dep:bytes", "dep:serde_urlencoded"]

[dev-dependencies]
async-stream = "0.3.6"
