[package]
name = "datastar"
version = "0.1.0"
edition = "2021"
authors = ["ravenclaw900 <ravenclaw900@protonmail.com>"]
repository = "https://github.com/ravenclaw900/datastar-rs"
license = "MIT OR Apache-2.0"
description = "A Rust helper library for crafting backend responses for the datastar hypermedia library."
keywords = ["datastar", "sse"]
categories = ["web-programming", "encoding"]

[dependencies]
async-trait = { version = "0.1.83", optional = true }
asynk-strim = "0.1.2"
axum-core = { version = "0.4.5", optional = true }
form_urlencoded = { version = "1.2.1", optional = true }
futures-core = "0.3.31"
futures-util = { version = "0.3.31", optional = true }
http = { version = "1.1.0", optional = true }
pin-project-lite = "0.2.15"

[features]
axum = ["dep:axum-core", "dep:http", "dep:futures-util", "dep:form_urlencoded", "dep:async-trait"]
